# WorldSim-Writer

./: .gitignore  CLAUDE.md  LICENSE  README.md  REJECT_EDIT_FEATURE.md  WorldSim-Writer.md  test_api.py  test_generate.py  test_reject_edit.py  test_short_story.py
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_rejection_feedback.py  0003_add_narrative_pipeline_fields.py  0004_add_state_consistency_foundation.py  0005_add_foreshadow_events.py  0006_add_world_story_arc.py  0007_add_current_relations_projection.py  0008_add_draft_version_metadata.py  0009_add_character_arc_report.py  0010_add_world_snapshots.py  0011_add_chapter_execution_context.py
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/auth/: models.py  router.py  schemas.py  service.py
backend/app/character/: models.py  relation_router.py  relation_service.py  router.py  schemas.py  service.py
backend/app/core/: config.py  database.py  security.py
backend/app/event/: models.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_chapter_execution_context.py  test_character_arc_reports.py  test_character_crud.py  test_critic_reports.py  test_foreshadow_crud.py  test_health.py  test_llm_client.py  test_models.py  test_narrative_approval.py  test_narrative_control_center.py  test_narrative_draft_versioning.py  test_narrative_pipeline.py  test_relation_crud.py  test_snapshot_export.py  test_state_consistency.py  test_story_arc.py  test_world_template.py
(+79 files in other folders)
